<resources>
    <string name="app_name">Chat App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone</string>
    <string name="Submit">Submit</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Cancel">Cancel</string>
</resources>
