<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMyAccount">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="Edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userCityTextView" />

        <ImageView
            android:id="@+id/userImageImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="?attr/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelUserFirstNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/FirstName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userImageImageView" />

        <TextView
            android:id="@+id/userFirstNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/labelUserFirstNameTextView"
            app:layout_constraintTop_toTopOf="@+id/labelUserFirstNameTextView" />

        <TextView
            android:id="@+id/labelUserLastNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/LastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userFirstNameTextView" />

        <TextView
            android:id="@+id/userLastNametextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/labelUserLastNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/userFirstNameTextView" />

        <TextView
            android:id="@+id/labelUserEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/Email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userLastNametextView" />

        <TextView
            android:id="@+id/userEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/labelUserEmailTextView"
            app:layout_constraintTop_toBottomOf="@+id/userLastNametextView" />

        <TextView
            android:id="@+id/labelUserGenderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:text="Gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userEmailTextView" />

        <TextView
            android:id="@+id/userGenderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/labelUserGenderTextView"
            app:layout_constraintTop_toBottomOf="@+id/userEmailTextView" />

        <TextView
            android:id="@+id/labelUserCityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:text="City"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userGenderTextView" />

        <TextView
            android:id="@+id/userCityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/labelUserCityTextView"
            app:layout_constraintTop_toBottomOf="@+id/userGenderTextView" />

        <EditText
            android:id="@+id/userFirstNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintStart_toEndOf="@+id/labelUserFirstNameTextView"
            app:layout_constraintTop_toTopOf="@+id/labelUserFirstNameTextView" />

        <EditText
            android:id="@+id/userLastNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintStart_toEndOf="@+id/labelUserLastNameTextView"
            app:layout_constraintTop_toTopOf="@+id/labelUserLastNameTextView" />

        <EditText
            android:id="@+id/userCityEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintStart_toEndOf="@+id/labelUserCityTextView"
            app:layout_constraintTop_toTopOf="@+id/labelUserCityTextView" />

        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/labelUserGenderTextView"
            app:layout_constraintTop_toTopOf="@+id/labelUserGenderTextView">

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male" />

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female" />
        </RadioGroup>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="Save"
            app:layout_constraintEnd_toStartOf="@+id/editProfileButton"
            app:layout_constraintTop_toTopOf="@+id/editProfileButton" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/Cancel"
            app:layout_constraintStart_toEndOf="@+id/editProfileButton"
            app:layout_constraintTop_toTopOf="@+id/editProfileButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>